[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
iamgroot = { git = "https://github.com/sergey-melnychuk/iamgroot", tag = "v0.2.8" }
starknet-crypto = "0.6.2"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.80"
reqwest = { version = "0.12.3", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }

eyre = "0.6.12"
starknet = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
thiserror = "1.0.57"
axum = { version = "0.7.5", optional = true }
regex = "1.10.5"
once_cell = "1.19.0"

# There is a bug in ethers so we should pin its version
# to the exact version that Helios is using
helios = { git = "https://github.com/a16z/helios", rev = "1572a24" }

blockifier = "0.5.0"
starknet_api = "0.10.0"
cairo-vm = "0.9.3"

base64 = "0.22.0"
flate2 = "1.0.28"
cairo-lang-starknet-classes = "2.6.4"
ureq = { version = "2.9.6", features = ["json"] }
hex = "0.4.3"
bitvec = "1.0.1"
validator = { version = "0.18.1", features = ["derive"] }
url = "2.5.1"
toml = "0.8.14"
